Correctly align icon and text on <time> in articles

--- a/src/scss/components/Article.scss
+++ b/src/scss/components/Article.scss
@@ -5,6 +5,9 @@
 
 .Article-info {
   margin: 0 0 0.2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   @include robotom;
   @include fluid-type(font-size, 320, 1920, 12, 20);
   text-transform: uppercase;
@@ -14,13 +17,10 @@
 }
 
 .Article-date {
-  display: inline-block;
-  vertical-align: middle;
+  margin-right: 0.8em;
 }
 
 .Article-pr {
-  display: inline-block;
-  vertical-align: middle;
   color: $light-green;
   text-decoration: none;
 }
